# clipsync

./: .gitignore  README.md  README_EN.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  discovery.rs  lib.rs  logger.rs  main.rs  network.rs  settings.rs  state.rs  transport.rs  tray.rs
src/components/: ClipHistory.tsx  DeviceList.tsx  NetworkSelector.tsx  Settings.tsx  StatusBar.tsx
src/i18n/: I18nContext.tsx  translations.ts
src/i18n/lang/: de.ts  en.ts  es.ts  fr.ts  ja.ts  ko.ts  pt.ts  ru.ts  zh.ts
src/styles/: app.css
website/: index.html
