[package]
name = "clip-sync"
version = "0.2.1"
description = "Cross-platform clipboard sync tool"
authors = ["you"]
edition = "2021"

[lib]
name = "clip_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
arboard = "3"
uuid = { version = "1", features = ["v4"] }
local-ip-address = "0.6"
hostname = "0.4"
get_if_addrs = "0.5"
log = { version = "0.4", features = ["std"] }
base64 = "0.22"
dirs = "5"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
